# KUSM-bkend

./: .env.example  README.md  bootstrap_admin.py  main.py  pyproject.toml
src/: auth.py  config.py  database.py  hello_world.py  init_meter.py  init_pastdata.py  models.py  scheduler.py  server.py  settings.py
src/api/: billing.py  iammeter.py
src/data/: Bio-Tech Department.csv  Bio-Tech.csv  Block 10.csv  Block 11.csv  Block 6.csv  Block 8.csv  Boys Hostel.csv  Boys_Hostel.csv  Civil.csv  Electrical.csv  Main Transformer.csv  Main_Transformer.csv  Management.csv  Physics.csv  Power.csv  weather.csv
src/routes/: analysis.py  billing.py  data_collection.py  live_data.py  meter.py  oauth.py  users.py
src/routes/auth/: auth_routes.py  auth_schemas.py  auth_utils.py
src/utils/: meter_status.py
